# agricultureDrone

./: .gitignore  README.md
Apps/IoT-Dashboard/: CMakeLists.txt  MushroomView.cpp  MushroomView.h  MushroomView.ui  RoundGaugeGraphicsObject.cpp  SensorsMQTT.cpp  SensorsMQTT.h  ToggleButton.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Apps/IoT-Dashboard/Database/: mongodb.json
Apps/Test/: global_pub.py  global_sub.py
